<resources>
    <string name="DSG_protection">SHORT Circuit:</string>
    <string name="Dischargehightemprecoveryvalue">Discharge high temperature recovery value should be lower than the protection value, setting failed</string>
    <string name="IC_error">AFE ERROR:</string>
    <string name="Temperature_1">Temperature_1</string>
    <string name="Temperature_2">Temperature_2</string>
    <string name="Temperature_3">Temperature_3</string>
    <string name="Temperature_4">Temperature_4</string>
    <string name="Temperature_5">Temperature_5</string>
    <string name="Temperature_6">Temperature_6</string>
    <string name="Temperature_7">Temperature_7</string>
    <string name="Temperature_8">Temperature_8</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_not_registered">Account not registered</string>
    <string name="active_disconnected">Bluetooth connection disconnected</string>
    <string name="app_name">XiaoXiangElectric</string>
    <string name="app_screen_name">lib_screen</string>
    <string name="authorize">Authorize</string>
    <string name="authorize_tip">After the authorization review is successful, have the parameter setting authority for the bound device。</string>
    <string name="authorize_tip2">Applied, please wait for review</string>
    <string name="authorize_tip3">Authorized, please do not reapply</string>
    <string name="barcode">barcode</string>
    <string name="barcode_tip">Please put the QR code/barcode in the scan box to scan automatically</string>
    <string name="battery_lithium">Switch to LFP</string>
    <string name="battery_setting">Ignore battery optimization</string>
    <string name="battery_ternary">Switch to NMC</string>
    <string name="bluetooth_psw">Connect password</string>
    <string name="cell_full_voltage">Full voltage</string>
    <string name="cell_over_vol">CELL OVP:</string>
    <string name="cell_overvoltage">Cell overvoltage count</string>
    <string name="cell_release_voltage">End of voltage</string>
    <string name="cell_under_vol">CELL UVP:</string>
    <string name="cell_undervoltage">Cell undervoltage count</string>
    <string name="change_battery_lithium">Set to LFP params?</string>
    <string name="change_battery_ternary">Set to NMC params?</string>
    <string name="change_first_lev_psw">Change the password</string>
    <string name="change_first_lev_psw2">Modify the password</string>
    <string name="characteristic_select_default">characteristic uuid(Default 2B12)</string>
    <string name="charge_low_temp">CHG UTP:</string>
    <string name="charge_over_current">CHG OCP:</string>
    <string name="charge_over_temp">CHG OTP:</string>
    <string name="charge_over_time">CHGOVERTIME:</string>
    <string name="charging_over_temperature">Charging over temperature count</string>
    <string name="charging_overcurrent">Charging overcurrent count</string>
    <string name="charging_under_temperature">Charging under temperature count</string>
    <string name="clean_psw">Clear password</string>
    <string name="code_error">The verification code is entered incorrectly. Please re-enter the verification code</string>
    <string name="code_tip">Please scan the code again and confirm that the device is powered on</string>
    <string name="connect_fail">connection failed</string>
    <string name="crop_fail">Crop failed</string>
    <string name="device_not_exist">Device information does not exist</string>
    <string name="dialog_cancel">cancel</string>
    <string name="dialog_clear_warn">Are you sure to clear the warning？</string>
    <string name="dialog_content">To ensure your normal use of this application, please go to set up authorization</string>
    <string name="dialog_define">determine</string>
    <string name="dialog_go">go to</string>
    <string name="dialog_tip">Tips</string>
    <string name="discharge_over_temperature">Discharge over temperature count</string>
    <string name="discharge_overcurrent">Discharge overcurrent count</string>
    <string name="discharge_under_temperature">Discharge under temperature count</string>
    <string name="down_file_path">Files downloaded to:</string>
    <string name="downloaded">Downloaded</string>
    <string name="downloading">downloading</string>
    <string name="email_error">Mailbox format error</string>
    <string name="exit_app">Press again to exit the program</string>
    <string name="factory_success">Factory settings restored successfully</string>
    <string name="first_psw_clean_failed">Password clearing failed</string>
    <string name="first_psw_clean_success">password cleared successfully</string>
    <string name="first_psw_modify_failed">password modified failed</string>
    <string name="first_psw_modify_success">Password modified successfully</string>
    <string name="first_psw_set_failed">Failed to set the password</string>
    <string name="first_psw_set_success">The password is set successfully</string>
    <string name="foundVersion">Found a new version, whether to update?</string>
    <string name="found_firmware">New firmware found Pls ensure App version is the latest version before upgrading</string>
    <string name="give_up">give up</string>
    <string name="gpsNotifyMsg">Abra el servicio de GPS en la configuración de privacidad</string>
    <string name="ignored">Ignored</string>
    <string name="input_key">Remove password</string>
    <string name="invalid_user_name_format">Invalid user name format</string>
    <string name="jc_xlistview_footer_hint_normal">查看更多</string>
    <string name="jc_xlistview_footer_hint_ready">松开载入更多</string>
    <string name="jc_xlistview_header_hint_loading">正在扫描附近设备...</string>
    <string name="jc_xlistview_header_hint_normal">下拉重新扫描附近设备</string>
    <string name="jc_xlistview_header_hint_ready">下拉重新扫描附近设备</string>
    <string name="jc_xlistview_header_last_time">上次更新时间：</string>
    <string name="lib_name">IDCardCamera</string>
    <string name="load_end">没有更多数据</string>
    <string name="load_failed">加载失败，请点我重试</string>
    <string name="loading">正在加载中...</string>
    <string name="manager_device">Device management</string>
    <string name="missing_parameter">The necessary parameters email and password are missing</string>
    <string name="missing_parameter_2">The required parameter [email] [newPwd] [code] is missing</string>
    <string name="missing_parameter_3">The required parameter [email] or [phone] is missing</string>
    <string name="mobile_number_error">Mobile number format error</string>
    <string name="net_loading">loading...</string>
    <string name="net_reload">Reload</string>
    <string name="network_disconnect">network disconnected</string>
    <string name="no_authorize_change_first_psw">You do not have permission to modify the password</string>
    <string name="no_operation_permission">No operation permission</string>
    <string name="none">Nothing</string>
    <string name="not_mac_address">Missing required parameter [macAddr]</string>
    <string name="not_null_mac">Device MAC address cannot be empty</string>
    <string name="not_token">Missing required parameter token</string>
    <string name="notifyTitle">Tips</string>
    <string name="nullity_token">Invalid token</string>
    <string name="open_tip">Please open Bluetooth permissions</string>
    <string name="operation_failed">Operation failed</string>
    <string name="operation_succeeded">Operation succeeded</string>
    <string name="operation_timeout">Operation timeout</string>
    <string name="ota_fail">Upgrade failed</string>
    <string name="outpub_over_current">DSG OCP:</string>
    <string name="output_low_temp">DSG UVP:</string>
    <string name="output_over_temp">DSG OTP:</string>
    <string name="output_over_time">DSGOVERTIME:</string>
    <string name="ovp_delay">HwCellVoltHighDelay</string>
    <string name="ovp_value">HwCellHighVoltProtect</string>
    <string name="pack_over_vol">PACK OVP:</string>
    <string name="pack_overvoltage">Pack overvoltage count</string>
    <string name="txt_Balancedmethod">Balanced method</string>
    <string name="txt_Balanceenable">Balance enable</string>
    <string name="txt_Buzzerenable">Buzzer enable</string>
    <string name="txt_Charginghandshake">Charging handshake</string>
    <string name="txt_FCC">FCC</string>
    <string name="txt_LEDenable">LED enable</string>
    <string name="txt_LEDnumber">LED number</string>
    <string name="txt_Loaddetection">Load detection</string>
    <string name="txt_RTC">RTC</string>
    <string name="txt_Staticequilibrium">Static equilibrium</string>
    <string name="txt_Switchfunction">Switch function</string>
    <string name="txt_chart_tag_capacitance">Cap/AH</string>
    <string name="txt_chart_tag_electric">Current/A</string>
    <string name="txt_chart_tag_temperature">Temp/°C</string>
    <string name="txt_chart_tag_voltage">Volt/V</string>
    <string name="txt_gps">GPS</string>
    <string name="txt_info_email">Email account</string>
    <string name="txt_info_phone">Phone number</string>
    <string name="txt_login_ok">Confirm</string>
    <string name="txt_login_provide">In order to provide you with better after-sales service, please bind your mobile phone number and e-mail address, thank you!</string>
</resources>