<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:myswitch="http://schemas.android.com/apk/res-auto">
    <include layout="@layout/v2_layout_top_title" />
    <include layout="@layout/v2_layout_paramse" />
    <androidx.core.widget.NestedScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout style="@style/Level2_params_lly">
                <TextView android:text="@string/txt_Switchfunction" style="@style/Level2_params_tv1" />
                <LinearLayout android:gravity="center|right" android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <Switch android:id="@id/switch_off" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/MySwitch2" />
                </LinearLayout>
            </LinearLayout>
            <View android:background="@color/line_gray_2" android:layout_width="fill_parent" android:layout_height="0.5dip" />
            <LinearLayout style="@style/Level2_params_lly">
                <TextView android:text="@string/txt_Loaddetection" style="@style/Level2_params_tv1" />
                <LinearLayout android:gravity="center|right" android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <Switch android:id="@id/switch_load" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/MySwitch2" />
                </LinearLayout>
            </LinearLayout>
            <View android:background="@color/line_gray_2" android:layout_width="fill_parent" android:layout_height="0.5dip" />
            <LinearLayout style="@style/Level2_params_lly">
                <TextView android:text="@string/txt_Balanceenable" style="@style/Level2_params_tv1" />
                <LinearLayout android:gravity="center|right" android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <Switch android:id="@id/switch_equalizing" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/MySwitch2" />
                </LinearLayout>
            </LinearLayout>
            <View android:background="@color/line_gray_2" android:layout_width="fill_parent" android:layout_height="0.5dip" />
            <LinearLayout android:id="@id/lly_balance_type" android:onClick="onClickFunction" style="@style/Level2_params_lly">
                <TextView android:id="@id/tv_balance_type_title" android:text="@string/txt_Balancedmethod" style="@style/Level2_params_tv3" />
                <TextView android:id="@id/tv_balance_type" android:text="@string/txt_Staticequilibrium" style="@style/Level2_params_tv2" />
                <ImageView style="@style/Level2_params_img" />
            </LinearLayout>
            <View android:background="@color/line_gray_2" android:layout_width="fill_parent" android:layout_height="0.5dip" />
            <LinearLayout style="@style/Level2_params_lly">
                <TextView android:text="@string/txt_LEDenable" style="@style/Level2_params_tv1" />
                <LinearLayout android:gravity="center|right" android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <Switch android:id="@id/switch_led" android:layout_width="wrap_content" android:layout_height="14.0dip" style="@style/MySwitch2" />
                </LinearLayout>
            </LinearLayout>
            <View android:background="@color/line_gray_2" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="0.5dip" />
            <LinearLayout android:visibility="gone" style="@style/Level2_params_lly">
                <TextView android:text="@string/txt_LEDnumber" style="@style/Level2_params_tv1" />
                <LinearLayout android:gravity="center|right" android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <Switch android:id="@id/switch_ledNum" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/MySwitch2" />
                </LinearLayout>
            </LinearLayout>
            <View android:background="@color/line_gray_2" android:layout_width="fill_parent" android:layout_height="0.5dip" />
            <LinearLayout style="@style/Level2_params_lly">
                <TextView android:text="@string/txt_RTC" style="@style/Level2_params_tv1" />
                <LinearLayout android:gravity="center|right" android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <Switch android:id="@id/switch_FCC" android:layout_width="wrap_content" android:layout_height="14.0dip" style="@style/MySwitch2" />
                </LinearLayout>
            </LinearLayout>
            <View android:background="@color/line_gray_2" android:layout_width="fill_parent" android:layout_height="0.5dip" />
            <LinearLayout style="@style/Level2_params_lly">
                <TextView android:text="@string/txt_FCC" style="@style/Level2_params_tv1" />
                <LinearLayout android:gravity="center|right" android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <Switch android:id="@id/switch_RTC" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/MySwitch2" />
                </LinearLayout>
            </LinearLayout>
            <View android:background="@color/line_gray_2" android:layout_width="fill_parent" android:layout_height="0.5dip" />
            <LinearLayout style="@style/Level2_params_lly">
                <TextView android:text="@string/txt_Charginghandshake" style="@style/Level2_params_tv1" />
                <LinearLayout android:gravity="center|right" android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <Switch android:id="@id/switch_shake" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/MySwitch2" />
                </LinearLayout>
            </LinearLayout>
            <View android:background="@color/line_gray_2" android:layout_width="fill_parent" android:layout_height="0.5dip" />
            <LinearLayout style="@style/Level2_params_lly">
                <TextView android:text="@string/txt_gps" style="@style/Level2_params_tv1" />
                <LinearLayout android:gravity="center|right" android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <Switch android:id="@id/switch_gps" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/MySwitch2" />
                </LinearLayout>
            </LinearLayout>
            <View android:background="@color/line_gray_2" android:layout_width="fill_parent" android:layout_height="0.5dip" />
            <LinearLayout style="@style/Level2_params_lly">
                <TextView android:text="@string/txt_Buzzerenable" style="@style/Level2_params_tv1" />
                <LinearLayout android:gravity="center|right" android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <Switch android:id="@id/switch_beep" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/MySwitch2" />
                </LinearLayout>
            </LinearLayout>
            <View android:background="@color/line_gray_2" android:layout_width="fill_parent" android:layout_height="0.5dip" />
            <LinearLayout style="@style/Level2_params_lly">
                <TextView android:text="@string/Temperature_1" style="@style/Level2_params_tv1" />
                <LinearLayout android:gravity="center|right" android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <Switch android:id="@id/switch_temp1" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/MySwitch2" />
                </LinearLayout>
            </LinearLayout>
            <View android:background="@color/line_gray_2" android:layout_width="fill_parent" android:layout_height="0.5dip" />
            <LinearLayout style="@style/Level2_params_lly">
                <TextView android:text="@string/Temperature_2" style="@style/Level2_params_tv1" />
                <LinearLayout android:gravity="center|right" android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <Switch android:id="@id/switch_temp2" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/MySwitch2" />
                </LinearLayout>
            </LinearLayout>
            <View android:background="@color/line_gray_2" android:layout_width="fill_parent" android:layout_height="0.5dip" />
            <LinearLayout style="@style/Level2_params_lly">
                <TextView android:text="@string/Temperature_3" style="@style/Level2_params_tv1" />
                <LinearLayout android:gravity="center|right" android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <Switch android:id="@id/switch_temp3" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/MySwitch2" />
                </LinearLayout>
            </LinearLayout>
            <View android:background="@color/line_gray_2" android:layout_width="fill_parent" android:layout_height="0.5dip" />
            <LinearLayout style="@style/Level2_params_lly">
                <TextView android:text="@string/Temperature_4" style="@style/Level2_params_tv1" />
                <LinearLayout android:gravity="center|right" android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <Switch android:id="@id/switch_temp4" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/MySwitch2" />
                </LinearLayout>
            </LinearLayout>
            <View android:background="@color/line_gray_2" android:layout_width="fill_parent" android:layout_height="0.5dip" />
            <LinearLayout style="@style/Level2_params_lly">
                <TextView android:text="@string/Temperature_5" style="@style/Level2_params_tv1" />
                <LinearLayout android:gravity="center|right" android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <Switch android:id="@id/switch_temp5" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/MySwitch2" />
                </LinearLayout>
            </LinearLayout>
            <View android:background="@color/line_gray_2" android:layout_width="fill_parent" android:layout_height="0.5dip" />
            <LinearLayout style="@style/Level2_params_lly">
                <TextView android:text="@string/Temperature_6" style="@style/Level2_params_tv1" />
                <LinearLayout android:gravity="center|right" android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <Switch android:id="@id/switch_temp6" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/MySwitch2" />
                </LinearLayout>
            </LinearLayout>
            <View android:background="@color/line_gray_2" android:layout_width="fill_parent" android:layout_height="0.5dip" />
            <LinearLayout style="@style/Level2_params_lly">
                <TextView android:text="@string/Temperature_7" style="@style/Level2_params_tv1" />
                <LinearLayout android:gravity="center|right" android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <Switch android:id="@id/switch_temp7" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/MySwitch2" />
                </LinearLayout>
            </LinearLayout>
            <View android:background="@color/line_gray_2" android:layout_width="fill_parent" android:layout_height="0.5dip" />
            <LinearLayout style="@style/Level2_params_lly">
                <TextView android:text="@string/Temperature_8" style="@style/Level2_params_tv1" />
                <LinearLayout android:gravity="center|right" android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <Switch android:id="@id/switch_temp8" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/MySwitch2" />
                </LinearLayout>
            </LinearLayout>
            <View android:background="@color/line_gray_2" android:layout_width="fill_parent" android:layout_height="0.5dip" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>