<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/v2_layout_top_title" />
    <androidx.core.widget.NestedScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:paddingTop="@dimen/dp_30" android:paddingBottom="@dimen/dp_30" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <RelativeLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:paddingLeft="@dimen/dp_24" android:text="@string/txt_chart_tag_voltage" android:layout_alignParentLeft="true" style="@style/linechart_title" />
                <TextView android:paddingRight="@dimen/dp_24" android:text="@string/txt_chart_tag_electric" android:layout_alignParentRight="true" style="@style/linechart_title" />
            </RelativeLayout>
            <com.jiabaida.little_elephant.view.MyLineChart android:id="@id/lineChart_history_a" android:background="#00000000" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/dp_226" android:layout_marginLeft="@dimen/dp_20" android:layout_marginRight="@dimen/dp_20" />
            <View android:background="@color/line_gray" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="@dimen/dp_20" android:layout_marginTop="@dimen/dp_30" android:layout_marginRight="@dimen/dp_20" android:layout_marginBottom="@dimen/dp_34" />
            <RelativeLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:paddingLeft="@dimen/dp_24" android:text="@string/txt_chart_tag_capacitance" android:layout_alignParentLeft="true" style="@style/linechart_title" />
                <TextView android:paddingRight="@dimen/dp_24" android:text="@string/txt_chart_tag_electric" android:layout_alignParentRight="true" style="@style/linechart_title" />
            </RelativeLayout>
            <com.jiabaida.little_elephant.view.MyLineChart android:id="@id/lineChart_history_b" android:background="#00000000" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/dp_226" android:layout_marginLeft="@dimen/dp_20" android:layout_marginRight="@dimen/dp_20" />
            <View android:background="@color/line_gray" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="@dimen/dp_20" android:layout_marginTop="@dimen/dp_30" android:layout_marginRight="@dimen/dp_20" android:layout_marginBottom="@dimen/dp_34" />
            <RelativeLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:paddingLeft="@dimen/dp_24" android:text="@string/txt_chart_tag_temperature" android:layout_alignParentLeft="true" style="@style/linechart_title" />
                <TextView android:paddingRight="@dimen/dp_24" android:text="@string/txt_chart_tag_electric" android:layout_alignParentRight="true" style="@style/linechart_title" />
            </RelativeLayout>
            <com.jiabaida.little_elephant.view.MyLineChart android:id="@id/lineChart_history_c" android:background="#00000000" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/dp_226" android:layout_marginLeft="@dimen/dp_20" android:layout_marginRight="@dimen/dp_20" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>